# Senior-Project-Individual

./: README.md
first-game/: CMakeLists.txt  README.md  game_2048  game_2048.c
first-game/src/: game_2048_cmdline.c  main.c  snake.c  test.h
game_2048/: CMakeLists.txt
